fixed overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,6 @@
 
 @layer base{
   body{
-    @apply overflow-hidden;
+    @apply overflow-x-hidden;
   }
 }
